[DM] Header overflow solve

--- a/src/assets/sass/Header.scss
+++ b/src/assets/sass/Header.scss
@@ -8,6 +8,7 @@ body {
     height: 90px;
     width: 100%;
     padding: 10px 40px; 
+    box-sizing: border-box;
 }
 .header-flex {
     display: flex;
@@ -16,9 +17,13 @@ body {
     justify-content: space-between;
     align-items: center;
     color: white;
+    font-size: 16px;
 }
 .left, .right {
     display: flex;
+}
+.logo {
+    font-size: 20px;
 }
 .item {
     margin: 0 20px;
